# beaconwise-tek

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FREEZE_CHECKLIST.md  INTERFACE_CONTRACT.md  Makefile  NOTICE  PATCH_NOTES.md  PATCH_NOTES_RELEASE_HYGIENE.md  README.md  SECURITY.md  SMOKE_TEST.md  TEST_RESULTS_TEMPLATE.md  TEST_SUITE_OVERVIEW.md  app.py  governance_schema.json  mock_credentials.json.sample  pyproject.toml  render.yaml  requirements.txt  system_readiness.py
api/: main.py  resilience.py
docker/: Dockerfile
docs/: ADOPTION_GUIDE  ARCHITECTURE.md  COMPLIANCE_MAPPING.md  CONFORMANCE_REPORT.md  CONSTITUTION  CONSTITUTION.md  EVIDENCE_LIFECYCLE.md  FAQ.md  FILETREE.md  GOVERNANCE_USE_CASES.md  INDEX.md  PUBLIC_TRANSPARENCY_GUIDE.md  REGULATOR_BRIEFING.md  REGULATOR_LINT_REPORT.md  REPLAY_PROTOCOL.md  SCHEMA_SPECIFICATION.md  SECURITY_MODEL.md  THREAT_MODEL.md  VALIDATOR_GOVERNANCE.md
enterprise/: PILOT_PACKAGE  PILOT_PACKAGE.md
epack/: chain.py  postgres_store.py
examples/: minimal_demo.py  run_demo.py
policies/: default.yaml  enterprise_v9.yaml  healthcare.yaml
preprint/: README.md  beaconwise_preprint_v1.9.0.docx  docx_generator.js  pdf_generator.py
schemas/: decision_object.schema.json
testdata/: drift_epack_chain.jsonl  golden_epack_chain.jsonl  tampered_epack_chain.jsonl
tests/: conftest  test_consensus_config.py  test_consensus_orchestrator.py  test_engine.py  test_epack_chain_integrity.py  test_epack_reader.py  test_epack_reader_hooks.py  test_epack_reader_integration.py  test_gates_full.py  test_hash_agility.py  test_integration_scenario.py  test_kernel_replay_roundtrip.py  test_pr510_tool_sandbox.py  (+22 more)
(+89 files in other folders)
